Updating getione_catena and gestione_sala unit tests